some more minor fixes and stability improvements